fluxcd/apps/overlays/production/fairer-pages/httproute-xylem-overflow-4.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fairer-pages-xylem-overflow-4
  namespace: tingle-tuner
spec:
  parentRefs:
    - name: xylem-gateway
      namespace: arylls-lookout
  hostnames:
    - "joplin.pcfae.com"
    - "kasm.pcfae.com"
    - "kimai.pcfae.com"
    - "kms.pcfae.com"
    - "links.pcfae.com"
    - "loki.pcfae.com"
    - "lubelogger.pcfae.com"
    - "mail.pcfae.com"
    - "mazanoke.pcfae.com"
    - "mimir.pcfae.com"
    - "monica.pcfae.com"
    - "netalertx.pcfae.com"
    - "netbox.pcfae.com"
    - "ntfy.pcfae.com"
    - "nut.pcfae.com"
    - "nvr2.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /fairer-pages/
      backendRefs:
        - name: fairer-pages
          port: 8023
